--- a/part1/014.md
+++ b/part1/014.md
@@ -1,6 +1,13 @@
 # 입문014 "반복문 배우기 - for in"
 
+for-in 반복문은 for 반복문과 비슷하게 for 키워드를 사용
+순회조건과 내부요소에 접근하는 방법에 차이
+```
+for (속성명 in 반복할 대상){
 
+}
+```
+반복문을 통해 내부 요소를 하나씩 순회할 때마다, 각 요소의 키(Key) 정보가 for in에서 정의한 속성명으로 선언과 동시에 할당
 
 - 014.js
 ```
